--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 download_link: link.href
             };
 
-            emailjs.send("service_iag6if2", "template_wr5phie", emailParams)
+            emailjs.send("service_iag6if2", "template_vwlgsjs", emailParams)
                 .then(function(response) {
                     console.log("Email sent successfully", response);
                 }, function(error) {
